--- a/schedule-service-prod.properties
+++ b/schedule-service-prod.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/rll
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Banny@9550092083
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
