--- a/schedule-service-prod.properties
+++ b/schedule-service-prod.properties
@@ -9,3 +9,7 @@ spring.datasource.password=Banny@9550092083
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
