--- a/schedule-service-prod.properties
+++ b/schedule-service-prod.properties
@@ -7,8 +7,8 @@ spring.datasource.username=root
 spring.datasource.password=Banny@9550092083
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-#eureka.instance.preferIpAddress=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
 
 
 spring.rabbitmq.host=localhost
