--- a/schedule-service-prod.properties
+++ b/schedule-service-prod.properties
@@ -7,16 +7,16 @@ spring.datasource.username=root
 spring.datasource.password=Banny@9550092083
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8762/eureka
-eureka.instance.preferIpAddress=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8762/eureka
+#eureka.instance.preferIpAddress=true
 
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 
 # JPA configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
